fixed the deb  build issues